--- a/index.html
+++ b/index.html
@@ -7,5 +7,7 @@
 </head>
 <body>
     <p>Git + GitHub</p>
+    <h1>Hello</h1>
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Vel quis, quibusdam corporis quod, beatae quaerat itaque nihil, velit earum rem dolorum ducimus quia cupiditate quo? Quod saepe ipsam a suscipit!</p>
 </body>
 </html>
